# telegram-bot-rust

./: Cargo.toml  README.md
src/: commands.rs  config.rs  main.rs  models.rs  utils.rs
src/commands/: advice.rs  gurl.rs  help.rs  idea.rs  quote.rs  random.rs
